--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <video autoplay loop muted play-inline class="background">
-            <source src="https://cdn.pixabay.com/video/2016/09/13/5175-183786401_large.mp4">
+            <source src="https://videos.pexels.com/video-files/7849228/7849228-sd_960_506_25fps.mp4">
         </video>
         <nav>
             <ul>
